--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Dealership</title>
+    <title>K&K Car Dealership Company</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/logo.png" alt="Company Logo" id="logo">
+                <img src="Images/Logo1.jpg" alt="Company Logo" id="logo">
             </div>
             <h1>Welcome to Car Dealership</h1>
             <nav>
@@ -27,21 +27,21 @@
         <section id="featured-cars" class="container">
             <h2>Featured Cars</h2>
             <div class="car">
-                <img src="images/car1.jpg" alt="Car 1">
+                <img src="Images/8b188b01c93c5040af4bd5b9b5083c88.jpg" alt="Car 1">
                 <div class="car-details">
                     <h3>Car 1</h3>
                     <p>Price: $20,000</p>
                 </div>
             </div>
             <div class="car">
-                <img src="images/car2.jpg" alt="Car 2">
+                <img src="Images/Img2.jpg" alt="Car 2">
                 <div class="car-details">
                     <h3>Car 2</h3>
                     <p>Price: $25,000</p>
                 </div>
             </div>
             <div class="car">
-                <img src="images/car3.jpg" alt="Car 3">
+                <img src="Images/Img3.jpg" alt="Car 3">
                 <div class="car-details">
                     <h3>Car 3</h3>
                     <p>Price: $30,000</p>
