--- a/index.html
+++ b/index.html
@@ -56,6 +56,29 @@
                     <p>Price: $30,000</p>
                 </div>
             </div>
+            <div class="car">
+                <img src="Images/Img4.jpg" alt="Car 1">
+                <div class="car-details">
+                    <h3>Car 1</h3>
+                    <p>Price: $20,000</p>
+                </div>
+            </div>
+            <div class="car">
+                <img src="Images/Img2.jpg" alt="Car 2">
+                <div class="car-details">
+                    <h3>Car 2</h3>
+                    <p>Price: $25,000</p>
+                </div>
+            </div>
+            <div class="car">
+                <img src="Images/Img3.jpg" alt="Car 3">
+                <div class="car-details">
+                    <h3>Car 3</h3>
+                    <p>Price: $30,000</p>
+                </div>
+            </div>
+
+            </div>
         </section>
         
         <section id="banner" class="banner">
@@ -86,8 +109,8 @@
             <h2>Contact Us</h2>
             <p>If you have any questions or would like to schedule a test drive, please contact us:</p>
             <ul>
-                <li><strong>Address:</strong> 123 Main Street, Anytown, USA</li>
-                <li><strong>Phone:</strong> (123) 456-7890</li>
+                <li><strong>Address:</strong> 1237 Waikiki Way, Nairobi KENYA</li>
+                <li><strong>Phone:</strong> (+254) 740 4493 42</li>
                 <li><strong>Email:</strong> contact@kkcardealership.com</li>
             </ul>
         </section>
