--- a/index.html
+++ b/index.html
@@ -64,21 +64,42 @@
                 </div>
             </div>
             <div class="car">
-                <img src="Images/Img2.jpg" alt="Car 2">
+                <img src="Images/Img5.jpg" alt="Car 2">
                 <div class="car-details">
                     <h3>Car 2</h3>
                     <p>Price: $25,000</p>
                 </div>
             </div>
             <div class="car">
-                <img src="Images/Img3.jpg" alt="Car 3">
+                <img src="Images/Img6.jpg" alt="Car 3">
+                <div class="car-details">
+                    <h3>Car 3</h3>
+                    <p>Price: $30,000</p>
+                </div>
+            </div>
+            </div>
+            <div class="car">
+                <img src="Images/Img7.jpg" alt="Car 1">
+                <div class="car-details">
+                    <h3>Car 1</h3>
+                    <p>Price: $20,000</p>
+                </div>
+            </div>
+            <div class="car">
+                <img src="Images/Img8.jpg" alt="Car 2">
+                <div class="car-details">
+                    <h3>Car 2</h3>
+                    <p>Price: $25,000</p>
+                </div>
+            </div>
+            <div class="car">
+                <img src="Images/Img9.jpg" alt="Car 3">
                 <div class="car-details">
                     <h3>Car 3</h3>
                     <p>Price: $30,000</p>
                 </div>
             </div>
 
-            </div>
         </section>
         
         <section id="banner" class="banner">
