--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             <h1>Welcome to K&K Car Dealership</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Cars for Sale</a></li>
+                    <li><a href="#">Vehicles In KENYA</a></li>
+                    <li><a href="#">International Stock</a></li>
+                    <li><a href="#">Sell Your Car</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact</a></li>
+                    <li><a href="#"> FAQ </a></li>
                 </ul>
             </nav>
         </div>
